# stow

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
assets/: AppIcon.icns
docs/: design-brief.md  design.md  requirements.md
scripts/: bundle_macos.sh  make_icon.sh
src/: lib.rs  main.rs  theme.rs
src/core/: archive.rs  engine.rs  error.rs  mod.rs  model.rs  naming.rs  secret.rs  transfer.rs
tests/: engine_e2e.rs  zip_interop.rs
